[package]
name = "webhook_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.137"
sha2 = "0.10.8"
thiserror = "2.0.11"

[dev-dependencies]
temp-env = "0.3.6"
tempdir = "0.3.7"
